+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.5.3?
=============================

*Release date: XX-XXX-20XX*

Core and builtins
-----------------

Library
-------

- Bug #2220: handle rlcompleter attribute match failure more gracefully.

- Bug #1725737: In distutil's sdist, exclude RCS, CVS etc. also in the
  root directory, and also exclude .hg, .git, .bzr, and _darcs.

- Bug #1389051: imaplib causes excessive memory fragmentation when reading
  large messages.

- Bug #1389051, 1092502: fix excessively large memory allocations when
  calling .read() on a socket object wrapped with makefile(). 

- Bug #1433694: minidom's .normalize() failed to set .nextSibling for
  last child element.


Extension Modules
-----------------

Tests
-----

- Patch #2232: os.tmpfile might fail on Windows if the user has no
  permission to create files in the root directory.


Documentation
-------------

Build
-----

Windows
-------

What's New in Python 2.5.2?
=============================

*Release date: 21-Feb-2008*

Extension Modules
-----------------

- Fix deallocation of array objects when allocation ran out of memory.
  Remove array test case that was incorrect on 64-bit systems.

- Bug #2137: Remove test_struct.test_crasher, which was meaningful
  only on 32-bit systems.


What's New in Python 2.5.2c1?
=============================

*Release date: 14-Feb-2008*

Core and builtins
-----------------

- Added checks for integer overflows, contributed by Google. Some are
  only available if asserts are left in the code, in cases where they
  can't be triggered from Python code.

- Issue #2045: Fix an infinite recursion triggered when printing a subclass of
  collections.defaultdict, if its default_factory is set to a bound method.

- Issue #1920: "while 0" statements were completely removed by the compiler,
  even in the presence of an "else" clause, which is supposed to be run when 